test/bad/check/Orphan.hs
module Orphan where

instance Num [a]
